--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "format": "npm run prettier && npm run lint --fix --quiet",
+    "lint": "eslint . --ext .tsx",
+    "lint:fix": "npm run lint -- --fix",
+    "precommit": "lint-staged",
+    "prettier": "prettier --write './**/*.{tsx,md}'",
     "start": "next start"
   },
   "dependencies": {
@@ -18,6 +23,14 @@
     "@material-ui/types": "^5.1.0",
     "@types/node": "^14.6.1",
     "@types/react": "^16.9.48",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "prettier": "^2.1.1",
     "typescript": "^4.0.2"
   }
 }
